load("@bazel_tools//tools/build_defs/cc:cc.bzl", "cc_library", "cc_test")

# Nano-Redis library
cc_library(
    name = "nano_redis",
    srcs = [
        "src/version.cc",
    ],
    hdrs = [
        "include/nano_redis/version.h",
        "include/nano_redis/status.h",
    ],
    include_prefix = "nano_redis",
    visibility = ["//visibility:public"],
)

# Tests
cc_test(
    name = "version_test",
    srcs = ["tests/version_test.cc"],
    deps = [
        ":nano_redis",
        "@com_google_absl//absl/base:core_headers",
    ],
)

# Benchmarks (future commits)
# cc_binary(
#     name = "arena_bench",
#     srcs = ["tests/arena_bench.cc"],
#     deps = [
#         ":nano_redis",
#         "@com_google_benchmark//:benchmark",
#     ],
# )
